sumo/tests/sumo/errors/network/edges/testsuite.sumo
root__edges#no__empty

root__edges#no__not_numeric

root__edges#no__ungiven




root__edges__empty

root__edges__one_less

root__edges__one_more

root__edges__one_new

root__edges__one_double



